updated translation credits

--- a/app/index/index.css
+++ b/app/index/index.css
@@ -29,3 +29,17 @@
   margin: -0.1em 0.4em -0.1em 0.1em;
   height: 16px;
 }
+
+.linkedin.label {
+  border-color: #287bbc;
+  vertical-align: text-bottom;
+}
+
+.linkedin.label > .linkedin.square.icon {
+  color: #287bbc;
+  margin: 0;
+}
+.linkedin.label > span{
+  position: relative;
+top: 2px;
+}
